--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,13 +1,15 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions.
 
 name: Generate Snake
+permissions: 
+  contents: write
 
 # Controls when the action will run. This action runs every 6 hours.
 
 on:
   schedule:
-      # every 12 hours
-    - cron: "0 */12 * * *"
+      # every 6 hours
+    - cron: "0 */6 * * *"
 
 # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
@@ -23,16 +25,17 @@ jobs:
     steps:
     
     # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v2.5.0
+      - uses: actions/checkout@v2
       
     # Generates the snake  
-      - uses: Platane/snk@master
-        id: snake-gif
+      - uses: Platane/snk/svg-only@v3
         with:
           github_user_name: JahanRazh
+          outputs:
+            dist/github-snake.svg
           # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          # gif_out_path: dist/github-contribution-grid-snake.gif
+          # svg_out_path: dist/github-contribution-grid-snake.svg
           
      # show the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
